--- a/FuncGodot Manual/pages/helpful_links.html
+++ b/FuncGodot Manual/pages/helpful_links.html
@@ -11,15 +11,15 @@
 
         <h2 id="Godot">Godot and FuncGodot</h2>
         <p>
+            <b><a href="https://discord.gg/eBQ7EfNZSZ" target="_blank">Official FuncGodot Discord</a></b><br>
+            If you've got questions on FuncGodot or Godot, we've got some extremely helpful community members who are generally happy to answer them. 
+            Be respectul and patient: we're all volunteers, doing this on our free time and out of a love for the community.
+        </p>
+        <p>
             <b><a href="https://docs.godotengine.org/en/stable/" target="_blank">Godot 4 Latest Stable Documentation</a></b><br>
             This may seem obvious or sarcastic, but this is probably the best source for almost all of the answers to almost all of your questions. 
             This is your best friend. Most FuncGodot questions people have are really just Godot questions that don't involve FuncGodot at all. 
             If you need to know how to do something in Godot, it's in this manual (literally).
-        </p>
-        <p>
-            <b><a href="" target="_blank">Official FuncGodot Discord</a></b><br>
-            If you've got questions on FuncGodot or Godot, we've got some extremely helpful community members who are generally happy to answer them. 
-            Be respectul and patient: we're all volunteers, doing this on our free time and out of a love for the community.
         </p>
         <p>
             <b><a href="https://github.com/RhapsodyInGeek?tab=repositories" target="_blank">RhapsodyInGeek's GitHub Repositories</a></b><br>
