--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -107,7 +107,7 @@
         <p class="sidenav">
             <a href="faq.html" target="main">Frequently Asked Questions</a></br>
         </p><br>
-        <a href="#"><b>Join the FuncGodot Discord!</b></a>
+        <a href="https://discord.gg/eBQ7EfNZSZ" target="_blank"><b>Join the FuncGodot Discord!</b></a>
     </div>
 </body>
 </html>
