--- a/FuncGodot Manual/pages/start.html
+++ b/FuncGodot Manual/pages/start.html
@@ -53,7 +53,7 @@
         </p>
         <p>
             Both plugins are based on the original <a href="https://github.com/QodotPlugin/qodot-plugin/" target="_blank">Qodot for Godot 3.5</a> created by 
-            <a href="https://github.com/Shfty" target="_blank"><b>Shifty</b></a>.
+            <a href="https://github.com/Shfty" target="_blank"><b>Josh "Shifty" Palmer</b></a>.
         </p>
     </div>
     <br><br><br>
