--- a/FuncGodot Manual/pages/start.html
+++ b/FuncGodot Manual/pages/start.html
@@ -49,7 +49,7 @@
             <a href="https://github.com/DeerTears" target="_blank"><b>Emberlynn Bland</b></a>, and 
             <a href="https://github.com/RhapsodyInGeek" target="_blank"><b>Tim "RhapsodyInGeek" Maccabe</b></a>, 
             reworked from the <a href="https://github.com/QodotPlugin/Qodot/tree/main" target="_blank">Godot 4 port of Qodot</a> by Embyr, 
-            with contributions from members of the FuncGodot and Qodot Communities.
+            with contributions from members of the FuncGodot, Qodot, Godot, and Quake Mapping Communities.
         </p>
         <p>
             Both plugins are based on the original <a href="https://github.com/QodotPlugin/qodot-plugin/" target="_blank">Qodot for Godot 3.5</a> created by 
