--- a/FuncGodot Manual/pages/helpful_links.html
+++ b/FuncGodot Manual/pages/helpful_links.html
@@ -16,6 +16,10 @@
             Be respectul and patient: we're all volunteers, doing this on our free time and out of a love for the community.
         </p>
         <p>
+            <b><a href="https://github.com/orgs/func-godot/repositories" target="_blank">FuncGodot Repositories</a></b><br>
+            The official repositories contain helpful example projects that can show you how you might design your own games to take advantage of FuncGodot.
+        </p>
+        <p>
             <b><a href="https://docs.godotengine.org/en/stable/" target="_blank">Godot 4 Latest Stable Documentation</a></b><br>
             This may seem obvious or sarcastic, but this is probably the best source for almost all of the answers to almost all of your questions. 
             This is your best friend. Most FuncGodot questions people have are really just Godot questions that don't involve FuncGodot at all. 
