--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Quake Champions Classic Manual</title>
+        <title>FuncGodot Manual</title>
         <link rel="icon" type="image/x-icon" href="FuncGodot Manual/images/godot_ranger.svg">
         <link rel="stylesheet" href="FuncGodot Manual/styles.css">
         <meta http-equiv="refresh" content="0; FuncGodot Manual/FuncGodot Manual.html"/>
