--- a/FuncGodot Manual/pages/guide_project_config.html
+++ b/FuncGodot Manual/pages/guide_project_config.html
@@ -55,13 +55,13 @@
         </p>
         <p>
             The <b>Trenchbroom Game Config Folder</b> is the location of your game's TrenchBroom Game Config folder. This might (but doesn't have to be) the same 
-            as your <i>FGD Output Folder</i>. When you export your <a href="ref_trenchbroom_resources.html#GameConfig" target="main">TrenchBroomGameConfig</a><br> resource, 
+            as your <i>FGD Output Folder</i>. When you export your <a href="ref_trenchbroom_resources.html#GameConfig" target="main">TrenchBroomGameConfig</a> resource, 
             it will automatically export the FGD file to this folder as well, overriding the <i>FGD Output Folder</i> property.
         </p>
         <p>
             The <b>Netradiant Custom Gamepack Folder</b> is a little different, in that it should point to your NetRadiant Custom's <i>gamepacks</i> folder 
             (eg: <i>C:/GameDev/NetRadiant Custom/gamepacks/</i>). This will also override the <i>FGD Output Folder</i> when you export your 
-            <a href="ref_netradiant_custom_resources.html#GamepackConfig" target="main">NetRadiantCustomGamepackConfig</a><br> resource, 
+            <a href="ref_netradiant_custom_resources.html#GamepackConfig" target="main">NetRadiantCustomGamepackConfig</a> resource, 
             as NetRadiant Custom splits up gamepack configurations across several folders and files.
         </p>
         <p>
