--- a/FuncGodot Manual/pages/ref_fgd_resources.html
+++ b/FuncGodot Manual/pages/ref_fgd_resources.html
@@ -202,13 +202,13 @@
                     Determines how this Solid Class utilizes the <code>"origin"</code> key value pair to find its position. Only valid if <i>Spawn Type</i> is set to ENTITY.<br>
                     <ul>
                         <li>
-                            <b>IGNORE : </b>Ignore origin property and only use averaged brush vertices for positioning. Standard Quake 1 / Half-Life behavior.
+                            <b>IGNORE : </b>Ignore origin property and only use averaged brush vertices for positioning.
                         </li>
                         <li>
                             <b>ABSOLUTE : </b>Use origin property for position center, ignoring brush vertice positions.
                         </li>
                         <li>
-                            <b>RELATIVE : </b>Use origin relative to averaged brush vertice positions. Use this setting if brush entity vertices have coordinates local to the origin.
+                            <b>RELATIVE : </b>Calculate position center using origin as an offset to averaged brush vertice positions.
                         </li>
                     </ul>
                 </td>
