Fix broken link
Fixed broken link in Textures chapter of guide leading back to FuncGodot introduction.

--- a/FuncGodot Manual/pages/guide_textures.html
+++ b/FuncGodot Manual/pages/guide_textures.html
@@ -98,7 +98,7 @@
 
         <h3>Mapping for <del>Quake</del> Godot</h3>
         <p>
-            We started off this manual with the point that <a href="../index.html#FuncGodotIsNotABspCompiler">FuncGodot is <i>not</i> a BSP compiler</a>. 
+            We started off this manual with the point that <a href="start.html#FuncGodotIsNotABspCompiler">FuncGodot is <i>not</i> a BSP compiler</a>. 
             If we map like we do in traditional Quake mapping...
         </p>
         <p align=center><img src="../images/guide_tex_bsp1.png" width=45%> <img src="../images/guide_tex_notbsp1.png" width=45%></p>
