--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -94,6 +94,7 @@
         <p class="sidenav">
             <a href="tips_naming.html" target="main">Naming Patterns</a><br>
             <a href="tips_worldspawn.html" target="main">Why Not Worldspawn?</a><br>
+            <a href="tips_runtime_building.html" target="main">Runtime Map Building</a><br>
             <a href="tips_multiple_models.html" target="main">Conditional Models in TrenchBroom</a>
         </p>
         <h3 class="sidenav">Additional Learning</h3>
