--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -94,7 +94,8 @@
         <p class="sidenav">
             <a href="tips_naming.html" target="main">Naming Patterns</a><br>
             <a href="tips_worldspawn.html" target="main">Why Not Worldspawn?</a><br>
-            <a href="tips_multiple_models.html" target="main">Conditional Models in TrenchBroom</a>
+            <a href="tips_multiple_models.html" target="main">Conditional Models in TrenchBroom</a><br>
+            <a href="tips_editor_building.html" target="main">Building Maps Direct from Editor</a>
         </p>
         <h3 class="sidenav">Additional Learning</h3>
         <p class="sidenav"><a href="helpful_links.html" target="main">Helpful Links</a></p>
