Minor PR comments I missed

--- a/FuncGodot Manual/pages/tips_runtime_building.html
+++ b/FuncGodot Manual/pages/tips_runtime_building.html
@@ -74,7 +74,7 @@ for cmd_line_arg in cmd_line_args:
 
         func_godot_map.local_map_file = map_override
         func_godot_map.verify_and_build()</code></pre>
-    <h2>Editor setup</h2>
+    <h2>Setting Up Your Editor</h2>
     <p>In the below guides, there will be references made to executables. This is up to the user, however you can use the Godot executable to run your game straight from the editor, or you could use exported binaries of your game. On Windows, your Godot Binary path is where you keep your Godot.exe file. On most Linux systems this is found under <code>/usr/bin/godot</code></p>
     <h3>TrenchBroom</h3>
     <p>
