Update docs for 2024.2
Adds references to new TB Game Config properties and clarification on support for WAD2 and WAD3 formats.

--- a/FuncGodot Manual/pages/guide_textures.html
+++ b/FuncGodot Manual/pages/guide_textures.html
@@ -139,7 +139,8 @@
         <h2 id="WADFiles">WAD Files</h2>
         <p>
             FuncGodot provides the option to use <a href="https://quakewiki.org/wiki/Texture_Wad" target="_blank">Texture WAD files</a> for your map materials. 
-            It's generally not recommended if it can be helped, but support for loose texture images varies from map editor to map editor.
+            It's generally not recommended if it can be helped, but support for loose texture images varies from map editor to map editor. 
+            FuncGodot supports both the Quake WAD2 format and the Half-Life WAD3 format.
         </p>
         <p>
             To use a WAD file with your <a href="ref_func_godot_map.html">FuncGodotMap</a> just add your imported WAD resource to the map node's <i>Texture Wads</i> array.
