--- a/FuncGodot Manual/pages/ref_func_godot_map.html
+++ b/FuncGodot Manual/pages/ref_func_godot_map.html
@@ -157,7 +157,8 @@
                 <td>Array[Resource]</td>
                 <td>
                     Optional <i>QuakeWADFile</i> resources to apply textures from. See the <a href="https://quakewiki.org/wiki/Texture_Wad" target="_blank">Quake Wiki</a> 
-                    for more information on Quake Texture WADs.
+                    for more information on Quake Texture WADs. 
+                    Supports both Quake WAD2 and Half-Life WAD3 formats.
                 </td>
             </tr>
 
