--- a/FuncGodot Manual/pages/ref_netradiant_custom_resources.html
+++ b/FuncGodot Manual/pages/ref_netradiant_custom_resources.html
@@ -83,6 +83,27 @@
                 <td>String</td>
                 <td>Skip texture path that gets applied to caulk and nodrawnonsolid shaders.</td>
             </tr>
+            <tr>
+                <td>Default Build Menu Variables</td>
+                <td>Dictionary</td>
+                <td>
+                    Variables to include in the exported gamepack's <i>default_build_menu.xml.</i><br>
+                    Each String key defines a variable name, and its corresponding String value as the literal command-line string 
+                    to execute in place of this variable identifier.<br>
+                    Entries may be referred to by key in <i>default_build_commands</i> values.
+                </td>
+            </tr>
+            <tr>
+                <td>Default Build Menu Commands</td>
+                <td>Dictionary</td>
+                <td>
+                    Commands to include in the exported gamepack's <i>default_build_menu.xml.</i><br>
+                    Keys, specified as a String, define the build option name as you want it to appear in Radiant.<br>
+                    Values represent commands taken within each option. They may be either a String or an Array of String elements 
+                    that will be used as the full command-line text issued by each command within its associated build option key.<br>
+                    They may reference entries in <i>default_build_variables</i> by using brackets, eg: [variable_key_name].
+                </td>
+            </tr>
         </table>
 
         <br><hr>
