--- a/FuncGodot Manual/pages/ref_netradiant_custom_resources.html
+++ b/FuncGodot Manual/pages/ref_netradiant_custom_resources.html
@@ -90,7 +90,7 @@
                     Variables to include in the exported gamepack's <i>default_build_menu.xml.</i><br>
                     Each String key defines a variable name, and its corresponding String value as the literal command-line string 
                     to execute in place of this variable identifier.<br>
-                    Entries may be referred to by key in <i>default_build_commands</i> values.
+                    Entries may be referred to by key in <i>default_build_menu_commands</i> values.
                 </td>
             </tr>
             <tr>
@@ -101,7 +101,7 @@
                     Keys, specified as a String, define the build option name as you want it to appear in Radiant.<br>
                     Values represent commands taken within each option. They may be either a String or an Array of String elements 
                     that will be used as the full command-line text issued by each command within its associated build option key.<br>
-                    They may reference entries in <i>default_build_variables</i> by using brackets, eg: [variable_key_name].
+                    They may reference entries in <i>default_build_menu_variables</i> by using brackets, eg: [variable_key_name].
                 </td>
             </tr>
         </table>
